# TFL_CORAN

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
configs/: __init__.py  default.yaml  env_sim.yaml  loader.py  o_ran_prod.yaml
data/: __init__.py  generate_sinr_mcs_table.py  historical_dataset.py
envs/: __init__.py
envs/o_ran_sim/: __init__.py  base_env.py  channel.py  mobility.py  scheduler.py  traffic.py
gnb/: __init__.py  collector.py  uplink.py
models/: __init__.py  ddqn.py  metrics.py
ric/: __init__.py  fl_server.py  gmm.py  orchestrator.py  topology.py  transfer.py  vgae.py
scripts/: __init__.py  evaluate.py  pretrain_vgae.py  run_fl_round.py  run_sim.py
tests/: __init__.py  test_aggregator.py  test_env_sim.py  test_gmm.py  test_topology.py  test_transfer.py  test_ue_agent.py  test_utils.py  test_vgae.py
ue/: __init__.py  agent.py  features.py  policy.py  replay_buffer.py
utils/: __init__.py  logger.py  logging.py  seed.py  serialization.py
