[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tfl-coran"
version = "0.1.0"
description = "Transfer-enhanced FL with Dynamic Clustering for 5G Open RAN"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
  "numpy>=1.24",
  "torch>=2.2",
  "PyYAML>=6.0.1",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.6.9",
  "black>=24.10",
  "isort>=5.13",
  "pre-commit>=3.8",
  "codespell>=2.3",
  "matplotlib>=3.7"
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
